--- a/emacs.org
+++ b/emacs.org
@@ -1,11 +1,11 @@
 # -*- eval: (jmn-export-to-html-on-save) -*-
 #+TITLE: Emacs Configuration
-#+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el :results output silent
+#+PROPERTY: header-args:emacs-lisp :tangle ~/.emacs.d/init.el :results output silent
 #+STARTUP: overview
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 #+OPTIONS: toc:3 num:nil
 
-* Setup
+* Setupes
 ** Auto-tangle
 This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-config= gets executed each time such a buffer gets saved.  This function checks to see if the file being saved is the Emacs.org file you're looking at right now, and if so, automatically exports the configuration here to the associated output files.
 #+begin_src emacs-lisp
