Default font height

--- a/emacs.org
+++ b/emacs.org
@@ -467,11 +467,12 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
 ** Font size
 #+begin_src emacs-lisp
   (defun jmn-set-font-height(value)
-    (interactive "nFont height (default is 100): ")
+    (interactive "Font height (default is 100): ")
     (set-face-attribute  'default nil :height value))
 
-  (jmn-set-font-height (alist-get (system-name) '(("xps" . 110)
-                                                  ("dsk" . 120)
+  (jmn-set-font-height (alist-get (system-name) '(
+                                                  ("xps" . 110)
+                                                  ("dsk" . 110)
                                                   ("lat" . 115))
                                   100 nil 'string=)) ;; default is 100
 
