Dockerfile-mode and .bashrc cleanup

--- a/emacs.org
+++ b/emacs.org
@@ -775,6 +775,11 @@ After this, the =compile= automatically holds the correct command.
   (add-hook 'prog-mode-hook #'hs-minor-mode)
 #+end_src
 
+** Docker
+#+begin_src emacs-lisp
+(use-package dockerfile-mode)
+#+end_src
+
 ** TODO Compilation mode in async output
 #+begin_src emacs-lisp :tangle no
   (defadvice compile (before ad-compile-smart activate)
