--- a/linuxSetupDocs/ssh.org
+++ b/linuxSetupDocs/ssh.org
@@ -82,3 +82,12 @@ ssh-keygen -t rsa -b 4096
 
   ssh-copy-id -i "$PUBKEYPATH" "$USER_AT_HOST"
 #+end_src
+
+* Port forwarding with century link
+IP address: 67.1.127.117
+- When on another network I can ping it
+
+ Check if port is being listened to
+ #+begin_src shell
+nc -zv 67.1.127.117 <port>
+ #+end_src
