fix jmn-set-font-height prompt

--- a/emacs.org
+++ b/emacs.org
@@ -467,7 +467,7 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
 ** Font size
 #+begin_src emacs-lisp
   (defun jmn-set-font-height(value)
-    (interactive "Font height (default is 100): ")
+    (interactive "nFont height (default is 100): ")
     (set-face-attribute  'default nil :height value))
 
   (jmn-set-font-height (alist-get (system-name) '(
