Improve emacs install documentation

--- a/emacs.org
+++ b/emacs.org
@@ -819,6 +819,9 @@ After this, the =compile= automatically holds the correct command.
       (add-hook 'sh-mode-hook #'my-sh-mode-hook-fn))
 #+end_src
 
+**** HOLD May need to attach shellcheck with flymake
+See https://amitp.blogspot.com/2023/10/emacs-and-shellcheck.html
+
 ** Python
 *** TODO Jupyter Notebooks
 **** TODO run Jupyter in babel
