--- a/linuxSetupDocs/emacs_setup.org
+++ b/linuxSetupDocs/emacs_setup.org
@@ -1,30 +1,36 @@
 #+title: Installing Emacs from Source
 
-* Building Emacs from Source
+* Install Script from online
+Use [[file:emacs_install.sh::!/usr/bin/env bash][emacs_install.sh]] sourced from  [[https://discussion.fedoraproject.org/t/installing-emacs-29-1/86732/4][here]].
+
+** IGNORE My Attempt Building Emacs from Source
+CLOSED: [2023-10-08 Sun 11:37]
 Updated for emacs 30.0.50 on Fedora 38
 
-** Dependencies for major flags used
-*** --with-ptgtk
+Use the script instead.
+
+*** Dependencies for major flags used
+**** --with-ptgtk
 #+begin_src shell
   sudo dnf install -y  gtk3-devel gnutls-devel ncurses-devel
 #+end_src
 
-*** --with-native-compilation
+**** --with-native-compilation
 #+begin_src shell
 sudo dnf install -y libgccjit-devel
 #+end_src
 
-*** --with-json
+**** --with-json
 #+begin_src shell
 sudo dnf install -y jansson-devel
 #+end_src
 
-*** --with-tree-sitter
+**** --with-tree-sitter
 #+begin_src shell
 sudo dnf install -y libtree-sitter-devel
 #+end_src
 
-** Main command
+*** Main command
 #+begin_src shell
   git clone https://github.com/emacs-mirror/emacs.git
   cd emacs
@@ -43,8 +49,8 @@ Have the Emacs client running as a daemon so quick edits in the terminal are pos
    #+begin_src shell
      systemctl --user enable emacs.service
    #+end_src
-2. Maybe need start this time (since we have already booted up)
 
+2. Maybe need start this time (since we have already booted up)
       #+begin_src shell
      systemctl --user start emacs.service
    #+end_src
