indicate empty lines and format the code region

--- a/emacs.org
+++ b/emacs.org
@@ -70,22 +70,23 @@ You can also use =M-x auto-package-update-now= to update right now!
 ** UI Configurations
 *** Basic
 #+begin_src emacs-lisp
-  (setq inhibit-startup-message t)           ; inhibit startup message
-  (tool-bar-mode -1)                         ; remove toolbar
-  (menu-bar-mode -1)                         ; Disable the menu bar
-  (scroll-bar-mode -1)                       ; remove side scrollbar
-  (tooltip-mode -1)                          ; Disable tooltips
-  (set-fringe-mode 10)                       ; Give some breathing room
-  (setq visible-bell t)                      ; Set up the visible bell
-  (save-place-mode 1)                        ; Open file where last visited
-  (add-hook 'text-mode-hook 'flyspell-mode)  ; enable spellcheck on text mode
-  (setq Buffer-menu-name-width 35)           ; give name more room
+  (setq inhibit-startup-message t)		; inhibit startup message
+  (tool-bar-mode -1)		         		; remove toolbar
+  (menu-bar-mode -1)				; Disable the menu bar
+  (scroll-bar-mode -1)			        	; remove side scrollbar
+  (tooltip-mode -1)				        ; Disable tooltips
+  (set-fringe-mode 10)				; Give some breathing room
+  (setq visible-bell t)			   	        ; Set up the visible bell
+  (save-place-mode 1)				; Open file where last visited
+  (add-hook 'text-mode-hook 'flyspell-mode)	; enable spellcheck on text mode
+  (setq Buffer-menu-name-width 35)		        ; give name more room
+   (setq-default indicate-empty-lines t)		; indicate long lines
   ;; (add-hook 'prog-mode-hook 'hl-line-mode)   ; highlight lines when programming
 
   ;; The following helps syncing
-  (global-auto-revert-mode 1)                ; refresh buffer if changed on disk
-  (setq auto-revert-use-notify nil)          ; don't notify?
-  (setq auto-revert-verbose nil)             ;
+  (global-auto-revert-mode 1)			; refresh buffer if changed on disk
+  (setq auto-revert-use-notify nil)		; don't notify?
+  (setq auto-revert-verbose nil)			;
 
   ;; Open text files in Org-Mode
   ;; (add-to-list 'auto-mode-alist '("\\.text\\'" . org-mode))
