--- a/emacs.org
+++ b/emacs.org
@@ -304,9 +304,15 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
 #+end_src
 
 ** Native Compilation
-*** Suppress compilation warnings
+Suppress compilation warnings
 #+begin_src emacs-lisp
   (setq native-comp-async-report-warnings-errors nil)
+#+end_src
+** Scratch buffer
+Set scratch buffer to be in org-mode and modify initial message
+#+begin_src emacs-lisp
+  (setq initial-major-mode 'org-mode)
+  (setq initial-scratch-message "**Scratch Buffer**\n\n")
 #+end_src
 
 ** Goto last change
@@ -1079,7 +1085,11 @@ The following keeps the compilation buffer if there are warnings or errors, and 
 #+end_src
 
 ** Org-babel
+Either start a source block with  =<[template]= or =C-c C-,= to select from org-select.
+
+Notes:
 Use # -*- org-src-preserve-indentation: t; -*- when doing tangle/detangle with python
+
 #+begin_src emacs-lisp
   (org-babel-do-load-languages 'org-babel-load-languages
                                (append org-babel-load-languages
@@ -1616,8 +1626,9 @@ Just some changes to make it feel more like the other modes.
 ** Default and time switches
 #+begin_src emacs-lisp
   ;; gruvbox goat
-  (jmn-load-gruvbox-dark-hard)
-  (transparency 95)
+  ;; (jmn-load-gruvbox-dark-hard)
+  (jmn-load-gruvbox-light-medium)
+  (transparency 100)
 #+end_src
 
 * Hacky Fixes
