--- a/emacs.org
+++ b/emacs.org
@@ -22,44 +22,38 @@ This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-con
 
 ** Packages and Management
 Archives: elpa is default, melpa is community.
-#+begin_src emacs-lisp
-  ;; Initialize package sources
-  (require 'package)
-
-  (setq package-archives '(("melpa" . "https://melpa.org/packages/")
-                           ("elpa" . "https://elpa.gnu.org/packages/")))
-
-  (package-initialize)
-
-  (unless package-archive-contents
-    (package-refresh-contents))
-#+end_src
-
-*** Use-package
 Use-package is macro that is used like a package manager. [[https://github.com/jwiegley/use-package][Use-Package Documentation]]
 #+begin_src emacs-lisp
-  ;;;; use-package ;;;;
-  (if 'nil
-      (progn
-       ;; Initialize use-package on non-Linux platforms
-       (unless (package-installed-p 'use-package)
-         (package-install 'use-package))
-       (require 'use-package)
-       (setq use-package-always-ensure t) ; no need for :ensure t for each package.
-       (setq use-package-verbose t) ; log configure/loading messages in *Messages*
-       )
-    (defmacro use-package (&rest _))) ;; uncomment to ignore all use-package commands
+  ;; Vanilla setup or using packages
+  (setq jmn-vanilla nil)
+  (setq jmn-vanilla t)
+  (setq jmn-term (not (display-graphic-p (selected-frame))))
 
+  (if jmn-vanilla
+      (defmacro use-package (&rest _))
+    (progn
+      (require 'package)
+      (setq package-archives '(("melpa" . "https://melpa.org/packages/")
+                               ("elpa" . "https://elpa.gnu.org/packages/")))
+      (package-initialize)
+
+      (unless package-archive-contents
+        (package-refresh-contents))
+
+      (unless (package-installed-p 'use-package)
+        (package-install 'use-package));; Initialize use-package on non-Linux platforms
+
+      (require 'use-package)
+      (setq use-package-always-ensure t) ; no need for :ensure t for each package.
+      (setq use-package-verbose t)) ; log configure/loading messages in *Messages*
+    ) ;; define use-package macro to do nothing
+
+  ;; allows us to make sure environment packages are installed
   (use-package use-package-ensure-system-package
     :ensure t)
-#+end_src
 
-*** Automatic Package Updates
-The auto-package-update package helps us keep Emacs packages up to date.  It will prompt you after a certain number of days either at startup or at a specific time of day to remind you to update your packages.
-
-You can also use =M-x auto-package-update-now= to update right now!
-
-#+begin_src emacs-lisp
+  ;; prompt will remind us to update your packages.
+  ;; Alternitiley we can =M-x auto-package-update-now= to update right now.
   (use-package auto-package-update
     :custom
     (auto-package-update-interval 90)
@@ -69,7 +63,6 @@ You can also use =M-x auto-package-update-now= to update right now!
     (setq auto-package-update-hide-results t)
     (auto-package-update-maybe)
     (auto-package-update-at-time "09:00"))
-
 #+end_src
 
 * General Emacs
@@ -77,7 +70,6 @@ You can also use =M-x auto-package-update-now= to update right now!
 *** Basic
 #+begin_src emacs-lisp
   ;;;; Basic ;;;;
-  (toggle-debug-on-error)                         ; start debugger on elisp error
   (setq inhibit-startup-message t)		; inhibit startup message
   (tool-bar-mode -1)		         	; remove toolbar
   (menu-bar-mode -1)				; Disable the menu bar
@@ -180,8 +172,7 @@ To ensure scrolling is fast in Emacs, disable  non-essential things while the wi
   (use-package undo-tree
     :config
     (global-undo-tree-mode 1)
-    (setq undo-tree-auto-save-history nil) ;; don't save ~undo-tree~ file
-    )
+    (setq undo-tree-auto-save-history nil)) ;; don't save ~undo-tree~ file
 #+end_src
 
 *** Modeline
@@ -227,7 +218,7 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
                             (bookmarks . 5)
                             (projects . 5)
                             (agenda . 5)
-                            ;;(registers . 5)
+                            (registers . 5)
                             ))
 
     (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
@@ -243,6 +234,61 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
     (define-key dashboard-mode-map (kbd "p")  'dashboard-previous-line))
 
   (add-hook 'dashboard-mode-hook 'my-dashboard-hook)
+#+end_src
+
+** Keybindings
+#+begin_src emacs-lisp
+  ;; general improvements
+  (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
+  (global-set-key (kbd "C-x C-b") 'buffer-menu)   ;; open buffer menue in current buffer
+  (global-set-key (kbd "C-x C-k") 'kill-current-buffer)   ;; "C-x k" asks which buffer
+  (global-set-key (kbd "C-o") 'other-window)  ;; default is "C-x o"
+  (global-set-key (kbd "M-o") 'previous-multiframe-window)
+  (global-set-key (kbd "C-c C-c") 'eval-buffer)
+  (global-set-key (kbd "C-c C-r") 'eval-region)
+
+  ;; make font bigger/smaller.
+  (global-set-key (kbd "C-=") 'text-scale-increase)
+  (global-set-key (kbd "C--") 'text-scale-decrease)
+  (global-set-key (kbd "C-0") 'text-scale-adjust)
+
+  ;; writing/editing
+  (global-set-key (kbd "<f9>") 'ispell-word)
+  (global-set-key (kbd "<f10>") 'dictionary-lookup-definition)
+
+  ;; Buffer-menu-mode
+  (define-key Buffer-menu-mode-map (kbd "C-o") 'other-window)
+  (define-key Buffer-menu-mode-map (kbd "M-o") 'previous-multiframe-window)
+  ;; "o" opens in another buffer and moves focus
+  ;; "C-M-o" opens in another buffer and keeps focus in the Buffer-menu
+  (define-key Buffer-menu-mode-map (kbd "C-M-o") 'Buffer-menu-switch-other-window)
+
+  ;; bookmark-bmenue
+  (with-eval-after-load 'bookmark
+  (define-key bookmark-bmenu-mode-map (kbd "C-o") 'other-window)
+  (define-key bookmark-bmenu-mode-map (kbd "M-o") 'previous-multiframe-window)
+  (define-key bookmark-bmenu-mode-map (kbd "C-M-o") 'bookmark-bmenu-switch-other-window)
+  )
+
+  ;; compilation-mode
+  (add-hook 'compilation-mode-hook (lambda () (define-key compilation-mode-map (kbd "C-o") 'other-window)))
+
+  ;; grep-mode
+  (defun jmn-grep-keybindings()
+    (define-key grep-mode-map (kbd "o") 'compilation-display-error)
+    (define-key grep-mode-map (kbd "C-o") 'other-window))
+
+  (add-hook 'grep-mode-hook #'jmn-grep-keybindings)
+
+  ;; adjust windows with keybindings
+  (global-set-key (kbd "C-<up>") 'enlarge-window)
+  (global-set-key (kbd "C-<down>") 'shrink-window)
+  (global-set-key (kbd "C-<right>") 'enlarge-window-horizontally)
+  (global-set-key (kbd "C-<left>") 'shrink-window-horizontally)
+
+  ;; non-org C-c <blank> bindings
+  (global-set-key (kbd "C-c r") 'revert-buffer)
+  (global-set-key (kbd "C-c =") 'vc-diff) ;; also bound to "C-x v ="
 #+end_src
 
 ** Dired
@@ -321,7 +367,7 @@ Check with other environments to settle on "C-;" or "M-;" -- the other us used f
 #+begin_src emacs-lisp
   (use-package goto-last-change
     :ensure t
-    :bind ("C-;" . goto-last-change))
+    :bind ("C-c g" . goto-last-change))
 #+end_src
 
 ** Input Buffer, Directory Search
@@ -340,7 +386,7 @@ Ivy displays vertical completions of input buffer.
 Ivy-rich provides information to display in input buffer to counsel.
 #+begin_src emacs-lisp
   (use-package ivy-rich
-    :after ivy
+    :after counsel
     :init
     (ivy-rich-mode 1))
 #+end_src
@@ -419,62 +465,6 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
   (setq flycheck-grammarly-check-time 0.8))
 #+end_src
 
-** Keybindings
-#+begin_src emacs-lisp
-  ;; general improvements
-  (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
-  (global-set-key (kbd "C-x C-b") 'buffer-menu)   ;; open buffer menue in current buffer
-  (global-set-key (kbd "C-x C-k") 'kill-current-buffer)   ;; "C-x k" asks which buffer
-  (global-set-key (kbd "C-o") 'other-window)  ;; default is "C-x o"
-  (global-set-key (kbd "M-o") 'previous-multiframe-window)
-  (global-set-key (kbd "C-c C-c") 'eval-buffer)
-  (global-set-key (kbd "C-c C-r") 'eval-region)
-
-  ;; make font bigger/smaller.
-  (global-set-key (kbd "C-=") 'text-scale-increase)
-  (global-set-key (kbd "C--") 'text-scale-decrease)
-  (global-set-key (kbd "C-0") 'text-scale-adjust)
-
-  ;; writing/editing
-  (global-set-key (kbd "<f9>") 'ispell-word)
-  (global-set-key (kbd "<f10>") 'dictionary-lookup-definition)
-
-  ;; Buffer-menu-mode
-  (define-key Buffer-menu-mode-map (kbd "C-o") 'other-window)
-  (define-key Buffer-menu-mode-map (kbd "M-o") 'previous-multiframe-window)
-  ;; "o" opens in another buffer and moves focus
-  ;; "C-M-o" opens in another buffer and keeps focus in the Buffer-menu
-  (define-key Buffer-menu-mode-map (kbd "C-M-o") 'Buffer-menu-switch-other-window)
-
-  ;; bookmark-bmenue
-  (with-eval-after-load 'bookmark
-  (define-key bookmark-bmenu-mode-map (kbd "C-o") 'other-window)
-  (define-key bookmark-bmenu-mode-map (kbd "M-o") 'previous-multiframe-window)
-  (define-key bookmark-bmenu-mode-map (kbd "C-M-o") 'bookmark-bmenu-switch-other-window)
-  )
-  ;; compilation-mode
-
-  (with-eval-after-load 'compilation
-    (define-key compilation-mode-map (kbd "C-o") 'other-window))
-
-  ;; grep-mode
-  (defun jmn-grep-keybindings()
-    (define-key grep-mode-map (kbd "o") 'compilation-display-error)
-    (define-key grep-mode-map (kbd "C-o") 'other-window))
-
-  (add-hook 'grep-mode-hook #'jmn-grep-keybindings)
-
-  ;; adjust windows with keybindings
-  (global-set-key (kbd "C-<up>") 'enlarge-window)
-  (global-set-key (kbd "C-<down>") 'shrink-window)
-  (global-set-key (kbd "C-<right>") 'enlarge-window-horizontally)
-  (global-set-key (kbd "C-<left>") 'shrink-window-horizontally)
-
-  ;; non-org C-c <blank> bindings
-  (global-set-key (kbd "C-c r") 'revert-buffer)
-  (global-set-key (kbd "C-c =") 'vc-diff) ;; also bound to "C-x v ="
-#+end_src
-
 ** Font size
 #+begin_src emacs-lisp
   (defun jmn-set-font-height(value)
@@ -539,11 +529,14 @@ Guess the indentation offset and 'indent-tabs-mode' from the file using internal
 (show-paren-mode    1) ; Highlight parentheses pairs.
 #+end_src
 
-*** Rainbow Delimiters
+*** TODO Rainbow Delimiters
+Need to test the org-mode hook
 Archive: melpa
 #+begin_src emacs-lisp
   (use-package rainbow-delimiters
-    :hook (prog-mode . rainbow-delimiters-mode))
+    ;; :hook ((prog-mode . rainbow-delimiters-mode)
+    ;; 	 (org-mode (lambda () (rainbow-delimiters-mode 0))))
+    )
 #+end_src
 
 *** Smartparens NOT USED
@@ -594,8 +587,7 @@ Issue: company mode not working in org-mode. Correct completion keys are not cle
     (company-minimum-prefix-length 1)
     (company-idle-delay 0.5)
     ;; (global-set-key (kbd "C-<tab>") 'company-complete)
-  )
-  (global-company-mode 1)
+    :config (global-company-mode 1))
 #+end_src
 
 *** company-box-mode
@@ -622,10 +614,8 @@ Help in sorting the completion results.
       :defer t
       :bind (("C-c t" . treemacs ))
       :config
-      (setq treemacs-width 30)
-      ;; :hook (treemacs-mode . (lambda ()
-      ;;                          (setq-local mode-line-format nil)))
-      )
+      (setq treemacs-width 30))
+
 #+end_src
 
 ** Centaur-Tabs (not using)
@@ -731,6 +721,8 @@ Archive: melpa
 #+begin_src emacs-lisp
   (use-package cmake-mode
     :defer t
+    :ensure-system-package
+    ((cmake . "sudo dnf install -y cmake"))
     :mode ("CMakeLists\\.txt\\'" "\\.cmake\\'"))
 
   (use-package cmake-font-lock
@@ -756,12 +748,12 @@ Archive: elpa, melpa
 #+begin_src emacs-lisp
   (use-package yasnippet
     :delight( yas-minor-mode)
-    :after lsp)
+    :after lsp
+    :config
+    (yas-global-mode 1))
 
   (use-package yasnippet-snippets
     :after yas-minor-mode) ; load basic snippets from melpa
-
-  (yas-global-mode 1)
 #+end_src
 
 ** Flyspell
@@ -769,8 +761,8 @@ Archive: elpa, melpa
 =C-.=    flyspell-auto-correct-word
 #+begin_src emacs-lisp
   ;; free up C-; for goto-last change
-  (with-eval-after-load 'flyspell
-      (define-key flyspell-mode-map (kbd "C-;") nil))
+  ;; (with-eval-after-load 'flyspell
+  ;;     (define-key flyspell-mode-map (kbd "C-;") nil))
 #+end_src
 
 ** Evil nerd commenter
@@ -811,6 +803,7 @@ Archive: melpa
 #+end_src
 
 ** TODO Compilation mode in async output
+Note: not used or tangled
 #+begin_src emacs-lisp :tangle no
   (defadvice compile (before ad-compile-smart activate)
     "Advises `compile' so it sets the argument COMINT to t."
@@ -918,8 +911,8 @@ After changing venv all installed packages from venv should be visible for LSP s
 
 **** python-mode
 #+begin_src emacs-lisp
-  ;; Python-mode
-  (with-eval-after-load 'python-mode
+  ;;;; Python-mode ;;;;
+  (with-eval-after-load 'python
     (setq python-shell-completion-native-enable 1)
     (setq python-shell-interpreter "ipython") ;;only if I have ipython
     (setq python-shell-interpreter-args "-i --simple-prompt")
@@ -992,10 +985,10 @@ Hook doesn't look right, but I am guessing I tested it when added
 ** Mode setup
 #+begin_src emacs-lisp
   (defun jmn/org-mode-setup ()
-    (org-indent-mode)
+    (unless jmn-term
+      (org-indent-mode))
     (variable-pitch-mode 1)
     (visual-line-mode 1)
-    (rainbow-delimiters-mode 0)
     ;; fix issue where it matches > with partentheses -- may break blocks with <>
     (modify-syntax-entry ?< ".")
     (modify-syntax-entry ?> ".")
@@ -1041,35 +1034,37 @@ Hook doesn't look right, but I am guessing I tested it when added
 
   (with-eval-after-load 'org
     (jmn/org-font-setup)
-    (setq org-ellipsis " ▾"
-          org-hide-emphasis-markers t
-          org-src-fontify-natively t
-          org-fontify-quote-and-verse-blocks t
-          org-src-tab-acts-natively t
-          org-edit-src-content-indentation 2 ;; I undo this somewhere 4tangling
-          org-hide-block-startup nil
-          org-src-preserve-indentation nil
-          org-startup-folded 'content
-          org-cycle-separator-lines 2
-          org-capture-bookmark nil
-          org-list-indent-offset 1
-          org-image-actual-width nil    ;; fix to allow picture resizing
-          org-return-follows-link t     ;; keep for sure ;@work
-          org-use-speed-commands t      ;; excellent
-          org-export-babel-evaluate nil ;; don't run src blocks on export
-          org-agenda-tags-column
-          (alist-get (system-name) '(("xps" . -85)
-                                     ("dsk" . -90))
-                     'auto nil 'string=)))
+    (unless jmn-term
+      (setq org-ellipsis " ▾"))
+    (setq org-hide-emphasis-markers t
+	  org-src-fontify-natively t
+	  org-fontify-quote-and-verse-blocks t
+	  org-src-tab-acts-natively t
+	  org-edit-src-content-indentation 2 ;; I undo this somewhere 4tangling
+	  org-hide-block-startup nil
+	  org-src-preserve-indentation nil
+	  org-startup-folded 'content
+	  org-cycle-separator-lines 2
+	  org-capture-bookmark nil
+	  org-list-indent-offset 1
+	  org-image-actual-width nil    ;; fix to allow picture resizing
+	  org-return-follows-link t
+	  org-use-speed-commands t
+	  org-export-babel-evaluate nil ;; don't run src blocks on export
+	  org-agenda-tags-column (alist-get
+				  (system-name) '(("xps" . -85)
+						  ("dsk" . -90))
+				  'auto nil 'string=)))
 #+end_src
 
-** Bullets
+** TODO Bullets
 Archive: melpa
 #+begin_src emacs-lisp
-  (use-package org-bullets
-    :hook (org-mode . org-bullets-mode)
-    :custom
-    (org-bullets-bullet-list '("◉" "○" "●" "○" "●" "○" "●")))
+  (unless jmn-term
+    (use-package org-bullets
+      :hook (org-mode . org-bullets-mode)
+      :custom
+      (org-bullets-bullet-list '("◉" "○" "●" "○" "●" "○" "●"))))
 #+end_src
 
 ** Center column
@@ -1184,7 +1179,7 @@ The following removes the prompts when loading the buffer with the local variabl
 #+begin_src emacs-lisp
   (add-to-list 'safe-local-variable-values '(eval jmn-export-to-html-on-save))
 
-  (if (version<= "29" emacs-version)
+  (if (and (version<= "29" emacs-version) (not jmn-vanilla))
       (with-eval-after-load 'org
         (add-to-list 'org-safe-remote-resources  "\\`https://fniessen\\.github\\.io/org-html-themes/org/theme-readtheorg\\.setup\\'")))
 #+end_src
@@ -1213,7 +1208,7 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
   (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "HOLD(h)" "|"
                                       "DONE(d)" "IGNORE(i)")))
 
-  (require 'find-lisp)
+  (require 'find-lisp) ;; may not be needed
   (setq org-directory "~/Documents/gtd/")
 
   (setq org-agenda-files (find-lisp-find-files org-directory "\.org$"))
@@ -1440,14 +1435,21 @@ Faster terminal due to being compiled. Default is a better mode than term-mode; 
 - C-c prefix for term commands
 - C-c C-c = send C-c to the terminal (kill running command)
 *** Extra installs needed
-- cmake
-- libtool
+For some reason :ensure-system-package did not work here so it is done explicitly in the :init
+Need to install: cmake, libtool
 
 #+begin_src emacs-lisp
   (use-package vterm
-    :commands vterm
+    :ensure-system-package ((cmake . "sudo dnf install -y cmake")
+                            (libtool . "sudo dnf install -y libtool" )) ;; compilation
     :defer t
     :bind (:map vterm-mode-map ("C-o" . other-window))
+    :init (let ((package "cmake"))
+             (unless (executable-find package)
+               (async-shell-command (concat "sudo dnf install -y " package))))
+           (let ((package "libtool"))
+             (unless (executable-find package)
+               (async-shell-command (concat "sudo dnf install -y " package))))
     :config
     ;;(setq term-prompt-regexp "^[^$]*[$] *");; match your custom shell
     ;;(setq vterm-shell "zsh");; Set this to customize the shell to launch
@@ -1596,7 +1598,7 @@ Helpful functions
 
 *** Doom-one
 #+begin_src emacs-lisp :tangle no
-    (use-package doom-themes)
+  (use-package doom-themes)
   (defun jmn-load-doom-one()
       "doom-one for dark time"
       (interactive)
@@ -1622,10 +1624,16 @@ Helpful functions
 
 ** Default and time switches
 #+begin_src emacs-lisp
-  ;; gruvbox goat
-  (jmn-load-gruvbox-dark-hard)
-  ;; (jmn-load-gruvbox-light-medium)
-  ;; (transparency 100)
+  (if (not jmn-vanilla)
+      (progn
+        (jmn-load-gruvbox-dark-hard) ;; gruvbox goat
+        ;; (jmn-load-gruvbox-light-medium)
+        ;; (transparency 96)
+        )
+    (print "no theme"))
+
+
+
 #+end_src
 
 * Hacky Fixes
@@ -1655,7 +1663,7 @@ Helpful functions
 source: https://github.com/syl20bnr/spacemacs/issues/7262
 #+begin_src emacs-lisp
   (defun on-after-init ()
-    (unless (display-graphic-p (selected-frame))
+    (if jmn-term
       (set-face-background 'default "unspecified-bg" (selected-frame)))
     (set-face-background 'line-number
                          (face-attribute 'default :background)))
